# Weather-ETL-Pipeline

./: .gitignore  README.md  bronze.py  docker-compose.yaml  gold.py  ingestion.py  main.py  main.tf  metadata.py  pyproject.toml  requirements.txt  silver.py  sql-analysis.ipynb  sql-data-cleaning.ipynb
data/city=Delhi/date=2026-02-13/: weather.parquet
data/city=Delhi/date=2026-02-14/: weather.parquet
data/city=London/date=2026-02-13/: weather.parquet
data/city=London/date=2026-02-14/: weather.parquet
data/city=NewYork/date=2026-02-13/: weather.parquet
data/city=NewYork/date=2026-02-14/: weather.parquet
data/city=Tokyo/date=2026-02-13/: weather.parquet
data/city=Tokyo/date=2026-02-14/: weather.parquet
gold/city=Delhi/date=2026-02-13/: data_0.parquet
gold/city=Delhi/date=2026-02-14/: data_0.parquet
gold/city=London/date=2026-02-13/: data_0.parquet
gold/city=London/date=2026-02-14/: data_0.parquet
gold/city=NewYork/date=2026-02-13/: data_0.parquet
gold/city=NewYork/date=2026-02-14/: data_0.parquet
gold/city=Tokyo/date=2026-02-13/: data_0.parquet
gold/city=Tokyo/date=2026-02-14/: data_0.parquet
silver/city=Delhi/date=2026-02-13/: data_0.parquet
silver/city=Delhi/date=2026-02-14/: data_0.parquet
silver/city=London/date=2026-02-13/: data_0.parquet
silver/city=London/date=2026-02-14/: data_0.parquet
silver/city=NewYork/date=2026-02-13/: data_0.parquet
silver/city=NewYork/date=2026-02-14/: data_0.parquet
silver/city=Tokyo/date=2026-02-13/: data_0.parquet
silver/city=Tokyo/date=2026-02-14/: data_0.parquet
