[project]
name = "weather-etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiosignal==1.4.0",
    "apache-airflow>=3.1.7",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "duckdb==1.4.4",
    "executing==2.2.1",
    "frozenlist==1.8.0",
    "httpx>=0.28.1",
    "idna==3.11",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "matplotlib-inline==0.2.1",
    "multidict==6.7.1",
    "nest-asyncio==1.6.0",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.0",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "platformdirs==4.8.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==23.0.0",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tenacity==9.1.4",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "wcwidth==0.6.0",
    "yarl==1.22.0",
]
